layout issues for announcement

--- a/assets/sass/components/_header-announcement.scss
+++ b/assets/sass/components/_header-announcement.scss
@@ -16,8 +16,9 @@
             justify-content: center;
 
             svg {
-                width: 6.2rem;
-                margin: 0 1rem 0 0;
+                display: inline-block;
+                width: 4.2rem;
+                margin: 1rem 1rem 0 0;
             }
 
             path {
@@ -27,10 +28,11 @@
             // Link/anchor element
             &-content {
                 position: relative;
+                width: 100%;
                 display: block;
                 text-align: left;
                 color: $gray;
-                padding: 1rem 1rem 0 1rem;
+                padding: 1rem 0 0;
 
                 &:nth-child(1),
                 &:nth-child(4),
@@ -57,6 +59,12 @@
                     text-transform: uppercase;
                     margin: 0 1rem 0 0;
                 }
+            }
+
+            p {
+                max-width: 24rem;
+                display: inline-block;
+                vertical-align: top;
             }
 
             }
